--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,3 +1,4 @@
 FROM almalinux:8
 ADD hello.txt /tmp/
 ADD https://github.com/Ganeshdevaws/dockerfiles/blob/master/commands.MD /tmp/
+ADD sample-1.tar /tmp/
