--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:8
-# almalinux is same as centos
+# almalinux is same as centos 8
 RUN yum install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
 RUN echo "Hello, Welcome to Dockerfile. A way of creating own images" > /usr/share/nginx/html/index.html
